--- a/pw4/requirements.txt
+++ b/pw4/requirements.txt
@@ -1,3 +1,4 @@
+appnope==0.1.0
 backports-abc==0.5
 bleach==2.1.2
 certifi==2018.1.18
@@ -5,6 +6,8 @@ cycler==0.10.0
 decorator==4.2.1
 entrypoints==0.2.3
 future==0.16.0
+geographiclib==1.49
+geopy==1.14.0
 html5lib==1.0.1
 ipykernel==4.8.2
 ipython==6.2.1
